# yolo-demo

./: .cursorrules  .gitignore  CLAUDE.md  README.md  config.py  main.py  overlay.py  pyproject.toml  pytest.ini  state.py
.claude/: settings.local.json
docs/plans/: 2026-04-11-rtsp-face-system-plan.md  2026-04-12-face-recognition-plan.md  2026-04-12-video-file-output-design.md  2026-04-16-face-alignment-plan.md
docs/specs/: 2026-04-11-rtsp-face-system-design.md  2026-04-12-face-recognition-design.md
docs/superpowers/plans/: 2026-04-16-face-alignment-plan.md  2026-04-17-pipeline-refactor.md
docs/superpowers/specs/: 2026-04-16-face-alignment-design.md  2026-04-17-pipeline-refactor-design.md
pipeline/: aligner.py  debug.py  detector.py  embedder.py  face_api.py  reader.py  tracker.py  writer.py
schemas/: face_feature.py
tests/: conftest.py  test_aligner.py  test_detector.py  test_embedder.py  test_face.py  test_face_api.py  test_integration.py  test_integration_face_alignment.py  test_overlay.py  test_state.py  test_tracker.py
