[project]
name = "yolo-demo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ultralytics>=8.3",
    "boxmot>=10.0",
    "insightface>=0.7",
    "onnxruntime>=1.18",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[dependency-groups]
dev = [
    "pyrefly>=0.60.2",
    "ruff>=0.15.10",
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-asyncio>=1.3.0",
]
